--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "prisma": "^6.14.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "cron": "^4.3.3"
+    "@prisma/client": "^6.14.0",
+    "@types/nodemailer": "^6.4.17",
+    "cron": "^4.3.3",
+    "dotenv": "^17.2.1",
+    "env-var": "^7.5.0",
+    "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.5"
   }
 }
